# node-cubeb

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  license  package.json  readme.md
src/: binding.cc  binding.js  cubeb.js  cubeb_binding.cc  cubeb_js.cc  cubeb_js.h  cubeb_js_context.cc  cubeb_js_device.cc  cubeb_js_device.h  cubeb_js_device_collection.cc  cubeb_js_device_collection.h  cubeb_js_stream.cc  cubeb_js_stream.h  node_cubeb.cc  node_cubeb.h  node_cubeb_context.cc  node_cubeb_stream.cc
test/: test.js
